--- a/template-veille-tech.html
+++ b/template-veille-tech.html
@@ -66,13 +66,13 @@
             <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">nom de l'outil</h3>
+                    <h3 class="tool-title">docker-suricata</h3>
                 </div>
                 <p class="tool-description">
                     [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/anombyte93/suricata-wazuh-docker.git" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
@@ -84,7 +84,7 @@
                     <h3 class="tool-title">Nom de l'outil</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Logiciel de surveillance et remonté de log : Suricata et Wazuh, installés en docker en accès immédiat via le dockerfile et docker-compose.yml/yaml
                 </p>
                 <footer>
                     <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
