--- a/template-veille-tech.html
+++ b/template-veille-tech.html
@@ -69,7 +69,7 @@
                     <h3 class="tool-title">docker-suricata</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Logiciel de surveillance et remonté de log : Suricata et Wazuh, installés en docker en accès immédiat via le dockerfile et docker-compose.yml/yaml
                 </p>
                 <footer>
                     <a href="https://github.com/anombyte93/suricata-wazuh-docker.git" target="_blank" class="tool-link" style="color: black;">
@@ -81,13 +81,13 @@
             <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">Nom de l'outil</h3>
+                    <h3 class="tool-title">Script Linux util</h3>
                 </div>
                 <p class="tool-description">
-                    Logiciel de surveillance et remonté de log : Suricata et Wazuh, installés en docker en accès immédiat via le dockerfile et docker-compose.yml/yaml
+                    Script pour administrateur systèmes et réseaux orienté Linux/Unix
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/stevejenkins/unifi-linux-utils.git" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
@@ -96,13 +96,13 @@
             <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">Nom de l'outil</h3>
+                    <h3 class="tool-title">Nmap</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Nmap permet d'écouter tous les ports ouverts sur le réseau, utile pour les pentesters ou la sécurité de votre réseau
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/nmap/nmap.git" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
@@ -111,13 +111,13 @@
              <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">Nom de l'outil</h3>
+                    <h3 class="tool-title">DPAT</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Outil d'audit de mot de passe de domaine (DPAT), pratique pour pentester
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/clr2of8/DPAT.git" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
