--- a/template-veille-tech.html
+++ b/template-veille-tech.html
@@ -66,7 +66,7 @@
             <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">docker-suricata</h3>
+                    <h3 class="tool-title">docker-suricata-wazuh</h3>
                 </div>
                 <p class="tool-description">
                     Logiciel de surveillance et remonté de log : Suricata et Wazuh, installés en docker en accès immédiat via le dockerfile et docker-compose.yml/yaml
